2005-11-16  Lillian Angel  <langel@redhat.com>
	
	Fixes PR classpath/<PR23557> and PR classpath/<PR24099>
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics2D.c
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_gdkDrawDrawable):
	Added check to determine if dst->drawable or src->drawable
	are actually drawable. If not, return.

2005-11-16  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/metal/MetalBorders.java
	(ButtonBorder.paintBorder): Special case the OceanTheme.
	(ButtonBorder.paintOceanThemeBorder): New method.
	* javax/swing/plaf/metal/MetalButtonUI.java
	(installDefaults): Set the rollover flag here. Don't set a special
	border for rollover buttons.
	(uninstallDefaults): Reset the rollover flag.
	(update): Only paint gradient when button is enabled and not pressed.
	* javax/swing/plaf/metal/MetalButtonUI.java
	(getCurrentTheme): New method.

2005-11-16  Gary Benson  <gbenson@redhat.com>

	* java/io/FilePermission.java (implies): Correct the sense
	in which action checks are applied.

2005-11-16  Anthony Balkissoon  <abalkiss@redhat.com>

	* AUTHORS: Added myself.
	* javax/swing/KeyboardManager.java: Changed @author tag to match the 
	other ones I have.
	* javax/swing/text/WrappedPlainView.java: Likewise.

2005-11-16  Gary Benson  <gbenson@redhat.com>
 
	* java/security/ProtectionDomain.java (toString): Use
	gnu.classpath.SystemProperties to read line.separator
	without security manager check.

2005-11-16  Lillian Angel  <langel@redhat.com>

	* java/awt/image/MemoryImageSource.java
	(startProduction): If animated, imageComplete should
	be called with the SINGLEFRAMEDONE flag, meaning the
	single frame is complete, but there are more frames 
	to follow.

2005-11-16  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/text/PlainDocument.java:
	(insertString): Null check fixes PR 24890.

2005-11-16  Lillian Angel  <langel@redhat.com>

	* javax/swing/plaf/basic/BasicTreeUI.java
	(paintVerticalPartOfLeg): Added a check to prevent